# syspulse-system-monitor-tool

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py  metrics.py  ws.py
static/: index.html
syspulse/: main.py  pyproject.toml
syspulse/app/: main.py  metrics.py
syspulse/static/: index.html
tests/: test_metrics.py
